--- a/public/odo.css
+++ b/public/odo.css
@@ -5,6 +5,7 @@
     *zoom: 1;
     *display: inline;
     position: relative;
+    white-space: nowrap;
 }
 .odometer.odometer-auto-theme .odometer-digit, .odometer.odometer-theme-default .odometer-digit {
     display: inline-block;
