--- a/public/coinbase.css
+++ b/public/coinbase.css
@@ -100,3 +100,178 @@
 .bSRCkl {
     border-radius: 50%;
 }
+
+
+.bXwCzE__overlay {
+    z-index: 1000;
+    width: 100vw;
+    position: fixed;
+    inset: 0px;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    align-items: flex-start;
+    background-color: rgba(50, 53, 61, 0.33);
+    overflow: scroll;
+    opacity: 0;
+    transition: opacity 250ms ease 0s;
+    will-change: opacity;
+}
+
+.bXwCzE__overlay--after-open {
+    opacity: 1;
+}
+
+.bXwCzE__content {
+    z-index: 1000;
+    position: static;
+    padding: 0px;
+    outline: none;
+    border: none;
+    border-radius: 4px;
+    background-color: rgb(var(--gray0));
+    box-shadow: 0 4px 16px rgba(var(--blue100),0.05);
+    margin: auto 0px;
+    overflow: visible;
+    width: auto;
+}
+
+.iJNVzr {
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: column;
+}
+
+@media not all and (max-width: 768px) {
+    .iJNVzr {
+        min-width: 450px;
+        max-width: 450px;
+    }
+}
+
+.fmqQye {
+    position: relative;
+    flex: 1 1 0%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    transition: none 0s ease 0s;
+}
+
+.eCGjpA {
+    flex: 1 1 0%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    opacity: 1;
+}
+
+.jXYamw {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+.lNSSd {
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    flex-direction: column;
+    min-height: 220px;
+}
+
+.epxRBa {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 6px;
+    color: rgb(var(--gray100));
+    font-size: 24px;
+    font-weight: 400;
+}
+
+.eBusKQ {
+    display: flex;
+    flex-direction: row;
+    color: rgb(var(--gray60));
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.bbYSpX {
+    display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 0px 16px;
+    border-top: 1px solid var(--line);
+    font-size: 14px;
+    font-weight: 400;
+    color: rgb(var(--gray100));
+}
+
+.gqfMQj {
+    display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    flex-direction: row;
+    -webkit-box-align: center;
+    min-height: 60px;
+    border-top: 1px solid var(--line);
+    font-size: 14px;
+    font-weight: 400;
+    color: rgb(var(--gray100));
+    align-items: flex-start;
+    padding: 16px;
+}
+
+.gROEWB {
+    display: flex;
+    flex: 1 1 auto;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    flex-direction: row;
+    padding: 12px 0px;
+}
+
+.gROEWB:not(:first-child) {
+    border-top: 1px dashed var(--line);
+}
+
+.gQTTzO {
+    margin-right: 8px;
+    color: rgb(var(--gray60));
+}
+
+.cYFUIP {
+    color: rgb(var(--gray100));
+    text-align: left;
+}
+
+.fRdEVh {
+    flex-shrink: 0;
+    fill: rgb(var(--gray60));
+    width: 80px;
+    height: 80px;
+}
+
+.dNdVME {
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+}
+
+.gfqrj {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    padding: 6px 10px;
+    border-radius: 4px;
+    font-weight: 500;
+    font-size: 12px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: var(--positive);
+    background-color: rgb(var(--gray0));
+}
