--- a/public/coinbase-trade-main.css
+++ b/public/coinbase-trade-main.css
@@ -1516,13 +1516,13 @@ tr.trade-watch-list-drag-and-drop-helper-class td:last-child {
 }
 
 .WBuZA {
-    display: flex;
-    flex-direction: column;
-    height: 2em;
-    line-height: 1.4em;
-    margin-bottom: 0.1em;
-    text-align: center;
-    user-select: auto;
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*height: 2em;*/
+    /*line-height: 1.4em;*/
+    /*margin-bottom: 0.1em;*/
+    /*text-align: center;*/
+    /*user-select: auto;*/
 }
 
 .iIKIld {
@@ -1563,7 +1563,7 @@ tr.trade-watch-list-drag-and-drop-helper-class td:last-child {
     font-size: 32px;
     font-family: CoinbaseDisplay, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     font-weight: 400;
-    line-height: 1.7em;
+    line-height: 1.5em;
 }
 
 @media (max-width: 768px) {
